"""initial migration

Revision ID: 2cba5dfb11dd
Revises: 
Create Date: 2025-08-22 15:43:54.338413

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '2cba5dfb11dd'
down_revision = None
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('restaurants',
    sa.Column('id', sa.String(length=36), nullable=False),
    sa.Column('name', sa.String(length=100), nullable=False),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('address', sa.String(length=255), nullable=False),
    sa.Column('phone', sa.String(length=20), nullable=True),
    sa.Column('email', sa.String(length=100), nullable=True),
    sa.Column('latitude', sa.Float(), nullable=False),
    sa.Column('longitude', sa.Float(), nullable=False),
    sa.Column('rating_average', sa.Float(), nullable=True),
    sa.Column('is_active', sa.Boolean(), nullable=True),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('UTC_TIMESTAMP()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(), server_default=sa.text('UTC_TIMESTAMP()'), nullable=True),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('users',
    sa.Column('id', sa.String(length=36), nullable=False),
    sa.Column('name', sa.String(length=50), nullable=False),
    sa.Column('username', sa.String(length=50), nullable=False),
    sa.Column('email', sa.String(length=100), nullable=False),
    sa.Column('password', sa.String(length=255), nullable=False),
    sa.Column('role', sa.String(length=20), nullable=False),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('UTC_TIMESTAMP()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(), server_default=sa.text('UTC_TIMESTAMP()'), nullable=True),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('email'),
    sa.UniqueConstraint('username')
    )
    op.create_table('foods',
    sa.Column('id', sa.String(length=36), nullable=False),
    sa.Column('name', sa.String(length=100), nullable=False),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('category', sa.String(length=50), nullable=True),
    sa.Column('price', sa.Float(), nullable=True),
    sa.Column('restaurant_id', sa.String(length=36), nullable=True),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('UTC_TIMESTAMP()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(), server_default=sa.text('UTC_TIMESTAMP()'), nullable=True),
    sa.ForeignKeyConstraint(['restaurant_id'], ['restaurants.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('restaurant_ratings',
    sa.Column('id', sa.String(length=36), nullable=False),
    sa.Column('user_id', sa.String(length=36), nullable=False),
    sa.Column('restaurant_id', sa.String(length=36), nullable=False),
    sa.Column('rating', sa.Float(), nullable=False),
    sa.Column('comment', sa.Text(), nullable=True),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('UTC_TIMESTAMP()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(), server_default=sa.text('UTC_TIMESTAMP()'), nullable=True),
    sa.ForeignKeyConstraint(['restaurant_id'], ['restaurants.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('user_id', 'restaurant_id', name='uq_user_restaurant_rating')
    )
    op.create_table('food_images',
    sa.Column('id', sa.String(length=36), nullable=False),
    sa.Column('food_id', sa.String(length=36), nullable=False),
    sa.Column('image_url', sa.String(length=255), nullable=True),
    sa.Column('is_main', sa.Boolean(), nullable=False),
    sa.Column('filename', sa.String(length=255), nullable=True),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('UTC_TIMESTAMP()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(), server_default=sa.text('UTC_TIMESTAMP()'), nullable=True),
    sa.ForeignKeyConstraint(['food_id'], ['foods.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('food_ratings',
    sa.Column('id', sa.String(length=36), nullable=False),
    sa.Column('user_id', sa.String(length=36), nullable=False),
    sa.Column('food_id', sa.String(length=36), nullable=False),
    sa.Column('rating', sa.Float(), nullable=False),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('UTC_TIMESTAMP()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(), server_default=sa.text('UTC_TIMESTAMP()'), nullable=True),
    sa.ForeignKeyConstraint(['food_id'], ['foods.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('user_id', 'food_id', name='uq_user_food_rating')
    )
    op.create_table('reviews',
    sa.Column('id', sa.String(length=36), nullable=False),
    sa.Column('user_id', sa.String(length=36), nullable=False),
    sa.Column('food_id', sa.String(length=36), nullable=False),
    sa.Column('content', sa.Text(), nullable=False),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('UTC_TIMESTAMP()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(), server_default=sa.text('UTC_TIMESTAMP()'), nullable=True),
    sa.ForeignKeyConstraint(['food_id'], ['foods.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('user_id', 'food_id', name='uq_user_food_review')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('reviews')
    op.drop_table('food_ratings')
    op.drop_table('food_images')
    op.drop_table('restaurant_ratings')
    op.drop_table('foods')
    op.drop_table('users')
    op.drop_table('restaurants')
    # ### end Alembic commands ###
